# wzrd

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  cli.py  config.py  download_docx.py  enums.py  pyproject.toml
.github/actions/approval-timeout/: action.yml
.github/actions/condition-check/: action.yml
.github/actions/terraform/: action.yml
.github/workflows/: cd.yml
app/: README.md  package-lock.json  package.json  requirements.txt  server.py  vite.config.ts
app/src/: App.vue  main.ts
app/src/assets/: base.css  chat.css  main.css
app/src/components/: ChatInterface.vue
cli/: config.py  download_docx.py  enums.py  main.py  utils.py
terraform/: init-services.sh  main.tf  variables.tf  wzrd.conf
wzrd/: server.py
wzrd/src/components/: ChatInterface.vue
